# funpack-ble-temperature

./: LICENSE  README.md
bt_soc_temperature/: .cproject  .project  app.c  bt_soc_temperature.pintool  bt_soc_temperature.slcp  bt_soc_temperature.slps
bt_soc_temperature/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
bt_soc_temperature/autogen/: .crc_config.crc  gatt_db.c  gatt_db.h  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c
bt_soc_temperature/config/: pin_config.h
bt_soc_temperature/config/btconf/: gatt_configuration.btconf
ui/: Cargo.toml
ui/src/: main.rs
