[package]
name = "ble-temperature-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
btleplug = { version = "0.11.5", features = ["serde"] }
eframe = "0.26.2"
egui = "0.26.2"
egui_plot = "0.26.2"
env_logger = "0.11.2"
futures = "0.3.30"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
uuid = "1.7.0"
